# ece508_lenkf

./: README.md
parallel/: CMakeLists.txt  build.sh  rai_build.yml
parallel/kernel_code/: CMakeLists.txt  compute.cu  compute.h  cusparse_spgemm.cu  structs.hu  template.cu
parallel/lenkf/: .gitignore  compute_P_HT.c  ensemble_test.c  lenkf.c
parallel/lenkf/python/: compute_P_HT.py
parallel/libmdb_matrix/: sparse_coo.h  sparse_rcs.h
sequential/: build.sh  rai_build.yml
sequential/lenkf/: .gitignore  Makefile
sequential/libmdb_matrix/: Makefile
test/: CMakeLists.txt  build.sh
test/kernel_code/: CMakeLists.txt  compute.cu
test/lenkf/: CMakeLists.txt  lenkf.c
test/libmdb_matrix/: .gitignore
